--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-            <link rel="stylesheet" href="/css/bootstrap.min.css" >
+            <link rel="stylesheet" href="css/bootstrap.min.css" >
 
             <script src="/js/jquery.min.js" ></script>
             <script src="/js/popper.min.js" ></script>
