--- a/src/views/books.ejs
+++ b/src/views/books.ejs
@@ -100,7 +100,7 @@
               <h3><%=books[i].title%></h3>
               <div class="row">
                 <div class="col-xs-9">
-                  <h4><span class="label label-default"><%=books[i].author%>></span></h4><h4>
+                  <h4><span class="label label-default"><%=books[i].author%></span></h4><h4>
                   <small style="font-family:courier,'new courier';" class="text-muted">2 hours ago  • 
                   <a href="/books/<%=books[i].id%>" class="text-muted">Read More</a></small>
                   </h4></div>
